Adjusted the logo so the ball isn't so gigantic, fixed the dropdown menu for the toolbelt so it isn't as gross, made the navbar home link bigger, commented some of the JSX for readability.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,22 @@
 html, body {
+  scroll-behavior: smooth;
   background-color: #ffffff;
   background-image: url("https://www.transparenttextures.com/patterns/noise-pattern-with-subtle-cross-lines.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+}
+
+body::-webkit-scrollbar {
+  width: 15px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #6a70f3;
+  outline: 1px solid #6a70f3;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #017bff;
+  outline: 1px solid #017bff;
 }
 
 .loginlink {
@@ -23,7 +38,7 @@ html, body {
 
 #bounce {
   font-family: 'Turret Road', cursive;
-  color: #6a70f3;
+  color: #ffeb3b;
 }
 
 .navbar {
@@ -67,4 +82,9 @@ html, body {
 .navbar {
   background-color: red;
   width: 100%;
+}
+
+#homeLink {
+  font-size: 200%;
+  font-weight: bold;
 }
