--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -1,5 +1,5 @@
 .footer {
-    position: absolute;
+    position: fixed;
     background-color: #162953 !important;
     border-top: 4px solid #ffffff;
     box-shadow: 5px 5px 5px 5px;
