--- a/src/components/homepage/style.css
+++ b/src/components/homepage/style.css
@@ -4,16 +4,10 @@
 }
 
 .dropdown-item {
-    background-color: #57a4d8;
     padding: 10px;
-    color: #ffffff;
+    font-weight: bold;
 }
 
 .dropdown-item:hover {
     background-color: #5f94c9;
-}
-
-.divider {
-    background-color: #000000 !important;
-    margin: 0;
 }
